--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="col-sm">
 
         <h1>About</h1>
-        <p>I am a research engineer in the Mixed Reality & AI lab of Micorosft in Zurich, Switzerland. <br/><br/>
+        <p>I am a research engineer in the Mixed Reality & AI lab of Microsoft in Zurich, Switzerland. <br/><br/>
 
             Previously, I was a PhD student in the computational imaging group at CWI, where I worked on various topics in real-time 3D tomography. I am interested in parallel algorithms and distributed-memory methods.</p>
     </div>
@@ -186,5 +186,16 @@ HLPP 2016, International Symposium on High-Level Parallel Programming and Applic
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+                                                                                                                                                                                                 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+<script>
+   window.MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']]
+  }
+};
+</script>
+ 
 </body>
 </html>
